force-app/main/default/objects/TelesalesPlanDetail__c/TelesalesPlanDetail__c.object-meta.xml
<CustomObject>
    <label>Telesales Plan Detail</label>
    <nameField>
        <displayFormat>TPD-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Telesales Plan Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>