force-app/main/default/objects/TelesalesPlanDetail__c/fields/CommercialAccount__c.field-meta.xml
<CustomField>
    <fullName>CommercialAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Telesales Plan Details</relationshipLabel>
    <relationshipName>TelesalesPlanDetails</relationshipName>
    <type>Lookup</type>
</CustomField>