force-app/main/default/objects/TelesalesPlanDetail__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hour</label>
    <type>Time</type>
</CustomField>