force-app/main/default/objects/TelesalesPlanDetail__c/fields/Telemarketer__c.field-meta.xml
<CustomField>
    <fullName>Telemarketer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Telemarketer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Telesales_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>