force-app/main/default/objects/TelesalesPlanDetail__c/fields/TelesalesPlan__c.field-meta.xml
<CustomField>
    <fullName>TelesalesPlan__c</fullName>
    <label>TelesalesPlan</label>
    <referenceTo>TelesalesPlan__c</referenceTo>
    <relationshipName>TelesalesPlanDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>