force-app/main/default/objects/TelesalesPlanDetail__c/recordTypes/TelesalesPlanDetail.recordType-meta.xml
<RecordType>
    <fullName>TelesalesPlanDetail</fullName>
    <active>true</active>
    <label>Telesales Plan Detail</label>
</RecordType>